--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "discord.js": "^13.2.0",
     "dotenv": "^16.3.1",
     "ws": "^8.14.0"
-  }  
+  }
 }
